added dropzone model

--- a/src/field/models/dropzone/model.config
+++ b/src/field/models/dropzone/model.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <model>
-  <name>Naughts Dropzone</name>
+  <name>Dropzone</name>
   <version>1.0</version>
   <sdf version="1.5">model.sdf</sdf>
 
@@ -11,7 +11,7 @@
   </author>
 
   <description>
-    Dropzone for Naught Objects.
+    Dropzone for Objects
   </description>
 
 </model>
